# nixos-tc-aya-test

./: Cargo.toml  README.md  build.sh  file.txt  flake.nix  run.sh  run_dev.sh
tc/: Cargo.toml
tc-common/: Cargo.toml
tc-ebpf/: Cargo.toml
tc-ebpf/src/: bindings.rs  main.rs
tc/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  run.rs
