[package]
name = "tc-aya"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
tc-common = { path = "../tc-common", features=["user"] }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
simplelog = "0.12"
netstat = "0.7.0"

[[bin]]
name = "tc-aya"
path = "src/main.rs"


[features]
ingress = []
egress = []
block_ip = []
redirect = []